--- a/src/Style/Gucci1.css
+++ b/src/Style/Gucci1.css
@@ -88,8 +88,6 @@
 }
 
 .contact-div {
-
-
   padding: 15px;
   width: 500px;
   height: 100vh;
@@ -97,6 +95,26 @@
   animation-duration: 0.5s;
   animation-name: slide-in-right;
   z-index: 1000;
+}
+.checkOut {
+  width: 900px;
+  padding: 20px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+#close-btn {
+  padding: 60px;
+  font-size: 25px;
+  cursor: pointer;
+  position: absolute;
+}
+.chekOutBtn {
+  font-size: 20px;
+  padding: 5px 8px;
+  border: none;
+  border: 2px solid black;
 }
 
 @media screen and (max-width: 360px) {
@@ -108,22 +126,42 @@
   }
 
   .contact-div {
-    /* position: absolute; */
+    display: flex;
+    margin: 0 auto;
+    position: absolute;
     right: 0;
     top: 0;
-    padding: 15px;
+    padding: 50px;
     width: 360px;
     height: 100vh;
     background-color: rgb(193, 66, 49);
     animation-duration: 0.5s;
     animation-name: slide-in-right;
-    z-index: 999;
+    /* animation-name: slide-in-left; */
   }
+  .checkOut {
+    display: flex;
+    width: 320px;
+    /* padding: 20px; */
+    display: flex;
+    padding: 0px 20px;
+    justify-content: space-between;
+    align-items: center;
+    /* margin: 0 auto; */
+  }
+  /* #close-btn {
+    padding: 20px;
+    font-size: 18px;
+    cursor: pointer;
+    position: absolute;
+  } */
+   .chekOutBtn {
+  font-size: 16px;
+  /* padding: 3px 5px; */
+  border: none;
+  border: 2px solid black;
 }
 
-#close-btn {
-  font-size: 25px;
-  cursor: pointer;
 }
 
 #menu-point {
@@ -218,24 +256,20 @@
   text-align: center;
 }
 
-.chekOutBtn {
-  font-size: 20px;
-  padding: 5px 8px;
-  border: none;
-  border: 2px solid black;
-}
-.checkOut {
-  width: 900px;
-  padding: 20px 0px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
-}
 
 @keyframes slide-in-right {
   from {
     transform: translateX(-150vw);
+    scale: 200% 1;
+  }
+  to {
+    transform: translateX(0);
+    scale: 100% 1;
+  }
+}
+@keyframes slide-in-left {
+  from {
+    transform: translateX(150vw);
     scale: 200% 1;
   }
   to {
@@ -248,12 +282,33 @@
   background-color: #ffffff;
   box-shadow: #edd6ca 0 -12px 6px inset;
   color: #1a1a1a;
-
+  width: 24rem;
   border-radius: 40em;
   border: none;
   box-sizing: border-box;
   cursor: pointer;
   display: inline-block;
+  font-family: -apple-system, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 700;
+  letter-spacing: -0.24px;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 0.15s ease;
+}
+.buttonn {
+  background-color: #ffffff;
+  box-shadow: #edd6ca 0 -12px 6px inset;
+  color: #1a1a1a;
+  width: 24rem;
+  display: none;
+  border-radius: 40em;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  /* display: inline-block; */
+  opacity: 0;
   font-family: -apple-system, sans-serif;
   font-size: 1.2rem;
   font-weight: 700;
@@ -283,5 +338,16 @@
   .button {
     font-size: 1.5rem;
     padding: 0.75rem 2rem;
+  }
+}
+@media screen and (max-width: 360px) {
+  .button {
+    display: block;
+    width: 270px;
+  }
+  .buttonn {
+    display: block;
+    width: 270px;
+    opacity: 1;
   }
 }
